alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Raleway", sans-serif !important;
-}
-
 img {
   width: 100%;
 }
@@ -36,7 +32,7 @@ nav li {
 .slider__item::after {
   content: "";
   position: absolute;
-  background-color: #00000081;
+  background-color: #000000a8;
   width: 100%;
   height: 100%;
   top: 0;
@@ -46,9 +42,14 @@ nav li {
 }
 
 .banner__details {
-  position: relative;
-  top: 40%;
+  margin-bottom: 200px;
   z-index: 1;
+}
+.banner__details h1 {
+  font-size: 4rem;
+}
+.banner__details p {
+  font-size: 1.8rem;
 }
 
 .primary-button {
@@ -113,9 +114,21 @@ footer img {
   .banner__slider .slider__item {
     height: 500px;
   }
-
   .slider__item img {
     object-fit: cover;
     min-height: 500px;
+  }
+  .banner__details {
+    margin-bottom: 10px;
+  }
+  .banner__details h1 {
+    font-size: 2rem;
+  }
+  .banner__details p {
+    font-size: 1.2rem;
+  }
+
+  #highlight {
+    bottom: 5px;
   }
 }
